objects/Account.object
<CustomObject>
    <fields>
        <fullName>LH_Client_Portal__c</fullName>
        <inlineHelpText>Used for LH PPP clients ONLY</inlineHelpText>
        <label>LH Client Portal</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LH_Club_ID__c</fullName>
        <label>LH Club ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LH_Exit_Survey_Sent_Date__c</fullName>
        <label>LH Exit Survey Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LH_Exit_Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zzzLH_Exit Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LM2_Value__c</fullName>
        <label>LM2-Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LM3_Value__c</fullName>
        <label>LM3-Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LM4_Value__c</fullName>
        <label>LM4-Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Activity_User__c</fullName>
        <description>Captures the last activity's Assigned To User</description>
        <label>Last Activity User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Closed_Date__c</fullName>
        <label>Last Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Completed_YBN_TP__c</fullName>
        <label>Last Completed YBN TP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Daily_Synch__c</fullName>
        <label>Last Daily Synch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Month_Total_Spend_Rep__c</fullName>
        <formula>IF(
(split_account__c = false), ( Last_Month_Total_Spend__c ),(  Last_Month_Total_Spend__c  )/2
)</formula>
        <inlineHelpText>Shows the amount an AD will be commissioned off of</inlineHelpText>
        <label>Last Month Total Spend-Rep</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Month_Total_Spend_South__c</fullName>
        <label>Last Month Total Spend-South</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Month_Total_Spend__c</fullName>
        <label>Last Month Total Spend</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Launch_Revenue__c</fullName>
        <formula>IF
(AND(
( Days_Since_Live__c &gt;=0), (ISPICKVAL( Status__c , "LIVE"))), Total_Amount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Launch Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Launchpad_Monthly_Fees__c</fullName>
        <label>Launchpad Monthly Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsSG51</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsTSZ5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Record_type_Conversion__c</fullName>
        <description>The Original Lead Recordtype for converted records, used to make sure this goes to the correct recordtype</description>
        <label>Lead Record type (Conversion)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Volume_Goal__c</fullName>
        <label>Lead Volume Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Branding__c</fullName>
        <label>Legacy Branding</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_TORCHx_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is to denote the TORCHx Accounts that were clients before Yodle acquired them.</description>
        <label>Legacy TORCHx Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Length_of_Sales_Cycle__c</fullName>
        <inlineHelpText>How many days is the company's sales cycle. Example - 120 days</inlineHelpText>
        <label>Length of Sales Cycle</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Client_Dashboard__c</fullName>
        <label>Link to Client Dashboard</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LiveOps_Call_Routing__c</fullName>
        <formula>IF( Temp_IMS_Rep__r.Collections__c, 

CASE(Client_Experience_Key__c, 
"rogers-main", "209", 
"torchx-main", "108",
"web.com-main", "107", 
"lighthouse-main", "304", "102"), 

IF( Temp_IMS_Rep__r.Retention_Associate__c,
   IF(CONTAINS(Product_Type__c,"SEM"), "104", "103"),

IF ( 
    AND (Service_Model_Local__c = "Dedicated", Client_Experience_Key__c != "web.com-main"),
    CASE(Client_Type__c, 
    "Yodle Core", "101", 
    "Local", "101", "101"), 

                        CASE(
                            IMS_Rep__r.Full_Name__c,
                            "Lighthouse Customer Care", "302",
                            "Customer Care", "100",
                            "Outrank Customer Support", "200",
                            "Berry Support", "203",
                            "Lighthouse Support", "300",
                            "Lighthouse Customer Care", "300",
                            "Lighthouse Medical", "300",
                            "Lighthouse Auto", "301",
                            "Lead Stream Support", "107",
                            "TORCHx Support", "108",

                            CASE(
                                Channel_Development__c,
                                
                                "Rogers",           "201",
                                "Advance",          "204",
                                "ViaMedia",         "206",
                                "Sun Times Media",  "207",
                                 YBN_Call_Routing__c 
                           ) 
                         )
                       )
                    )
                )</formula>
        <label>LiveOps Call Routing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveOps_LH_Call_Routing__c</fullName>
        <formula>CASE(
   IMS_Rep__c,
   "00560000002s9EP", "200",
   "00560000002sRdc", "203",
   "00560000001xL91", "300",
   "00560000001wjGS", "300",
   "00560000003U1AU", "300",
   "00560000003VB2Y", "301", "300")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LiveOps LH Call Routing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveOps_Pool_Standard__c</fullName>
        <description>Grabbing LiveOps_Pool__c  from Master Account</description>
        <formula>Parent.LiveOps_Pool__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LiveOps Pool Standard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveOps_Pool__c</fullName>
        <description>This field would be on the Master Account page layout - YBN Corporate Relationship Account (feed)</description>
        <label>LiveOps Pool</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveOps_SE_User_ID__c</fullName>
        <formula>NCE__r.LiveOps_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LiveOps SE User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveOps_User_ID__c</fullName>
        <formula>if (Temp_IMS_Rep__c != '', Temp_IMS_Rep__r.LiveOps_ID__c, IMS_Rep__r.LiveOps_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LiveOps User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveOps_VM_ID_Standard__c</fullName>
        <description>Grabbing LiveOps_VM_ID__c  from Master Account</description>
        <formula>Parent.LiveOps_VM_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LiveOps VM ID Standard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveOps_VM_ID__c</fullName>
        <description>This field would be on the Master Account page layout - YBN Corporate Relationship Account (feed)</description>
        <label>LiveOps VM ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Date__c</fullName>
        <label>Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Live__c</fullName>
        <formula>IF(  ISPICKVAL(Status__c, "LIVE") , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live_on_180th_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the account was LIVE 180-days after their live date, this box will be checked off.</inlineHelpText>
        <label>Live on 180th Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Website_Presence__c</fullName>
        <label>Local Website Presence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Low_Balance_Reason_Code__c</fullName>
        <description>Why is this client low balance paused?</description>
        <label>Low Balance Reason Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MARGIN_ON_PRODUCTS_FOR_FRANCHISEE__c</fullName>
        <label>Margin on Products for Franchisee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MARGIN_ON_PRODUCTS_FOR_FRANCHISOR__c</fullName>
        <label>Margin on Products for Franchisor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Main_Revenue_Service_Offered__c</fullName>
        <inlineHelpText>Service that brings in the most revenue for a customer</inlineHelpText>
        <label>Main Revenue Service Offered</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Management_Fee__c</fullName>
        <label>Management Fee</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Brand__c</fullName>
        <label>Manufacturer Brand</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maps_Claiming_and_Organic_History__c</fullName>
        <inlineHelpText>Details on any organic optimization completed in the past and whether or not listings were claimed</inlineHelpText>
        <label>Maps Claiming and Organic History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Challenge__c</fullName>
        <description>Used by YBN marketing.</description>
        <label>Marketing Challenge</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Fund_Fee_Detail__c</fullName>
        <inlineHelpText>Specific marketing fund fee percentage or amount</inlineHelpText>
        <label>Marketing Fund Fee Detail</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Goals__c</fullName>
        <label>Marketing Goals</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Ownership_Detail__c</fullName>
        <inlineHelpText>Details on what aspect of marketing the agency managers verse corporate, how satisfied is the customer with the agency and how long is the customer's contract with the agency</inlineHelpText>
        <label>Marketing Ownership Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Strategy_3_Year_Vision__c</fullName>
        <label>Marketing Strategy 3 Year Vision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Strategy_Overview__c</fullName>
        <label>Marketing Strategy Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Tagline__c</fullName>
        <label>Marketing Tagline</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketo_ID_For_Touchplan__c</fullName>
        <inlineHelpText>Used for WBN Touchplan if the Email is different</inlineHelpText>
        <label>Marketo ID For Touchplan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Implementation_Notes__c</fullName>
        <inlineHelpText>Details on custom mobile implementation</inlineHelpText>
        <label>Mobile Implementation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_Readiness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Readiness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_1_Check_In_Completed_Date__c</fullName>
        <label>Month 1 Check In Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_1_Check_In_Date_Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>YBN.  Used to adjust the Month 1 Check In Due By date formula field.</description>
        <label>Month 1 Check In - Date Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_1_Check_In_Due_By__c</fullName>
        <formula>IF(OR(
ISPICKVAL(Individual_Location_Service_Level__c,"Service Level A"),
ISPICKVAL(Individual_Location_Service_Level__c,"Service Level B"),
ISPICKVAL(Individual_Location_Service_Level__c,"Service Level C"),
ISPICKVAL(Individual_Location_Service_Level__c,"Service Level D")),
Live_Date__c+35+Month_1_Check_In_Date_Adjustment__c ,Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month 1 Check In Due By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_1_Check_In_Trigger_Date__c</fullName>
        <formula>Month_1_Check_In_Due_By__c - 14</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month 1 Check In Trigger Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Billing_Date__c</fullName>
        <label>zzzMonthly Billing Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Budget__c</fullName>
        <label>Monthly Budget</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Months_Live__c</fullName>
        <formula>IF(DAY( Live_Date__c ) = 1, (((YEAR( today() ) - YEAR( Live_Date__c
)) *12) + (MONTH( today() ) - MONTH( Live_Date__c ) ) +1),
((YEAR( today() ) - YEAR( Live_Date__c )) *12) + (MONTH(
today() ) - MONTH( Live_Date__c ) ) )</formula>
        <label>Months Live</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Bulk_Bid_Change__c</fullName>
        <inlineHelpText>This is the most recent date that a bulk bid change occurred.</inlineHelpText>
        <label>Most Recent Bulk Bid Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Contact__c</fullName>
        <label>Most Recent Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Flex_Algo_Change__c</fullName>
        <inlineHelpText>This is the date that the most recent algo change was automatically made.</inlineHelpText>
        <label>Most Recent Flex Algo Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Login_Date__c</fullName>
        <label>Most Recent Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Multi_Location_Account__c</fullName>
        <formula>RecordTypeId = '01232000000Q7tO' || Parent.RecordTypeId = '01232000000Q7tO' ||  Parent.Parent.RecordTypeId = '01232000000Q7tO'</formula>
        <label>Multi Location Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multi_Location_Owner_Primary_CID__c</fullName>
        <description>Client ID for which all communication gets logged - CS Managers allowed to access also</description>
        <label>Multi-Location Owner Primary CID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>NCE assigned to the relationship to call into individual locations</inlineHelpText>
        <label>YBN Sales Exec</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsT9eQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NCR_Campaign_Results__c</fullName>
        <label>NCR Campaign Results</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NE_09_Commission_Month__c</fullName>
        <label>Commission Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Send__c</fullName>
        <label>NPS Survey Send</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Type_Sent__c</fullName>
        <label>NPS Survey Type Sent</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NUMBER_OF_PRODUCTS_SERVICES_TO_SELL__c</fullName>
        <inlineHelpText>How many products &amp; services does the customer offer also known as SKUs</inlineHelpText>
        <label>Number of Products/Services Offered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Claimed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National-Claimed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Notes__c</fullName>
        <label>National Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>National_RM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National RM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>National_Rank__c</fullName>
        <label>National Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Rating__c</fullName>
        <label>National Rating</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_SDR_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SDR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>National_Segment_Color__c</fullName>
        <formula>'xx_Field_To_Be_Removed'</formula>
        <label>National Segment Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neither_Email_Cell__c</fullName>
        <label>% Neither Email/Cell</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Invoiced_Revenue_Last_MTD__c</fullName>
        <label>Net Invoiced Revenue-Last MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Invoiced_Revenue_Last_Month_Total__c</fullName>
        <label>Net Invoiced Revenue-Last Month Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Invoiced_Revenue_This_MTD__c</fullName>
        <label>Net Invoiced Revenue-This MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Customers_Per_Month_Goal__c</fullName>
        <label>New Customers Per Month Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Billing_Date__c</fullName>
        <label>Next Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Scheduled_Touchpoint__c</fullName>
        <label>Next Scheduled Touchpoint</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_TP_Needed_By_TEMP__c</fullName>
        <description>This field is used to hold the value of the next touch point date for WBN.  The formula is run in a Workflow to update the field value. there was an issue with having the field contain the formula.</description>
        <label>Next TP Needed By TEMP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_TP_Needed_By__c</fullName>
        <formula>IF(AND(ISPICKVAL(Individual_Location_Service_Level__c,"Service Level A"),
NOT(ISBLANK(Last_Completed_YBN_TP__c))), 
Last_Completed_YBN_TP__c + 31,

IF(AND(ISPICKVAL(Individual_Location_Service_Level__c,"Service Level B"),
NOT(ISBLANK(Last_Completed_YBN_TP__c))), 
Last_Completed_YBN_TP__c + 62,

IF(AND(ISPICKVAL(Individual_Location_Service_Level__c,"Service Level C"),
NOT(ISBLANK(Last_Completed_YBN_TP__c))), 
Last_Completed_YBN_TP__c + 93,

IF(AND(ISPICKVAL(Individual_Location_Service_Level__c,"Service Level A"),ISBLANK(Last_Completed_YBN_TP__c)), Live_Date__c + 62 + Month_1_Check_In_Date_Adjustment__c,

IF(AND(ISPICKVAL(Individual_Location_Service_Level__c,"Service Level B"),ISBLANK(Last_Completed_YBN_TP__c)), Live_Date__c + 93 + Month_1_Check_In_Date_Adjustment__c,

IF(AND(ISPICKVAL(Individual_Location_Service_Level__c,"Service Level C"),ISBLANK(Last_Completed_YBN_TP__c)), Live_Date__c + 124 + Month_1_Check_In_Date_Adjustment__c,

Null))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next TP Needed By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_TP_Trigger_Date__c</fullName>
        <formula>DATE(Year(Next_TP_Needed_By_Place_Holder__c), Month(Next_TP_Needed_By_Place_Holder__c),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next TP Trigger Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_SEM_Spend_Notes__c</fullName>
        <label>Non SEM Spend Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Not_OK_To_Clean_Out_Listing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, account will be flagged to NOT have their Organic listing cleaned out after product deactivation.</inlineHelpText>
        <label>Not OK To Clean Out Listing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_On_Continued_Underperformance__c</fullName>
        <label>Notes On Continued Underperformance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_leads_received__c</fullName>
        <label>Number of leads received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations_Specific__c</fullName>
        <label>Total Number of Locations</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Potential_Targets__c</fullName>
        <label>Number of Potential Targets</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_SMB_Customers__c</fullName>
        <label>zzzNumber of SMB Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OEM_Customer_Identifier__c</fullName>
        <label>OEM Customer Identifier</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oem_Corporate_Account__c</fullName>
        <label>zzzOEM Corporate Account</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_to_Client_Expiration__c</fullName>
        <label>Offer to Client Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_to_Client__c</fullName>
        <label>Offer to Client</label>
        <length>550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offers_Adoption_Goal__c</fullName>
        <inlineHelpText># is per location per month</inlineHelpText>
        <label>Offers Adoption Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Annual_Marketing_Budget__c</fullName>
        <inlineHelpText>Annual budget for online marketing spend only</inlineHelpText>
        <label>Online Annual Marketing Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Online_Scheduling_Adoption_Goal__c</fullName>
        <inlineHelpText># of locations Corporate wants online scheduling rolled out for</inlineHelpText>
        <label>Online Scheduling Adoption Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_as_Primary_Tab__c</fullName>
        <formula>HYPERLINK("/apex/OpenSubTabAsPrimaryTab?id="+ Id , "View as Primary Tab", "_self")</formula>
        <inlineHelpText>Open an Account that is a subtab into a primary tab in console so that the Highlight Panel and Sidebar will show the correct information. Primarily used for accounts that are opened through the View Hierarchy page.</inlineHelpText>
        <label>Open as Primary Tab</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Delta_Annual__c</fullName>
        <formula>Opp_Delta_MTD__c  * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Delta Annual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Delta_MTD__c</fullName>
        <formula>PEV__c -  Actual_Revenue_MTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Delta MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ops_Organic_Only_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ops Organic Only Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optimus_Listing_ID__c</fullName>
        <label>Optimus Listing ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organic_Build_Process_Details__c</fullName>
        <inlineHelpText>Details on organic strategy when build process is "custom"</inlineHelpText>
        <label>Organic Build Process Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organic_Cancel_Status__c</fullName>
        <label>Organic Cancel Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organic_Deactivation_Date__c</fullName>
        <label>Organic Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organic_Live_Date__c</fullName>
        <label>Organic Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organic_Order_Date__c</fullName>
        <label>Organic Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organic_Recurring_Fees__c</fullName>
        <inlineHelpText>Shows the monthly fees for products such as YO and video</inlineHelpText>
        <label>Organic Recurring Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Organic_taxonomy_details__c</fullName>
        <label>Organic taxonomy details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Channel_Model__c</fullName>
        <label>zzzOther Channel Model</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Performance_Goal__c</fullName>
        <label>Other Performance Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Performance_Goals__c</fullName>
        <label>Other Performance Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overspend_Optimizations_Exhausted_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Opt for Overspend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overview_on_Main_Point_of_Contact__c</fullName>
        <inlineHelpText>Insight on main point of contact, optimal communication methods, hot buttons, background etc.</inlineHelpText>
        <label>Overview on Main Point of Contact</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PEV_Penetration_Strategy__c</fullName>
        <inlineHelpText>How are we going to get Centermark into the account or build out Cenetermark and growth the relationship?</inlineHelpText>
        <label>Plan for Future Growth - PEV Penetration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PEV__c</fullName>
        <formula>((Monthly_Budget__c +  Corporate_Monthly_Organic_Fees__c + Corporate_Monthly_Mgmt_Fees__c )  *   Number_of_Locations_Specific__c)  * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PEV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PPC_Rank_Check__c</fullName>
        <label>PPC Rank Check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PPL_Goal__c</fullName>
        <label>PPL Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PPL_Performing__c</fullName>
        <label>PPL Performing?</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PV_Initiation_Date__c</fullName>
        <label>PV Initiation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Owner__c</fullName>
        <formula>Parent.Owner.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Company_Type__c</fullName>
        <description>Used by YBN.</description>
        <formula>IF(NOT(ISBLANK(ParentId)) &amp;&amp; NOT(ISBLANK(TEXT(Parent.National_Company_Type__c))), TEXT(Parent.National_Company_Type__c), "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Company Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <formula>Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>What opportunity is this individual location associated with</inlineHelpText>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Acct_ID__c</fullName>
        <label>Partner Acct ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Description__c</fullName>
        <label>Partner Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner ID</label>
        <referenceTo>Partner_Name__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>